--- a/translations/admin+intl-icu.es.xlf
+++ b/translations/admin+intl-icu.es.xlf
@@ -125,6 +125,7 @@
       <notes>
         <note category="german">Autor</note>
         <note category="from">twig:///templates/ajax/admin/reports/reports.html.twig;twig:///templates/ajax/admin/users/ban.html.twig</note>
+        <note category="state">new</note>
       </notes>
       <segment>
         <source>Autor</source>
@@ -265,6 +266,7 @@
       <notes>
         <note category="german">Admin</note>
         <note category="from">php:///src/Controller/Admin/AdminFileSystemController.php;twig:///templates/ajax/admin/users/account.html.twig;twig:///templates/ajax/admin/users/all_index.html.twig</note>
+        <note category="state">new</note>
       </notes>
       <segment>
         <source>Admin</source>
@@ -485,6 +487,7 @@
       <notes>
         <note category="german">ID</note>
         <note category="from">twig:///templates/ajax/admin/reports/reports.html.twig;twig:///templates/ajax/admin/towns/explorer.html.twig;twig:///templates/ajax/admin/towns/list.html.twig;twig:///templates/ajax/admin/towns/old_town_explorer.html.twig;twig:///templates/ajax/admin/towns/old_towns_list.html.twig;twig:///templates/ajax/admin/users/all_index.html.twig</note>
+        <note category="state">new</note>
       </notes>
       <segment>
         <source>ID</source>
@@ -655,6 +658,7 @@
       <notes>
         <note category="german">Zombies</note>
         <note category="from">twig:///templates/ajax/admin/towns/explorer.html.twig</note>
+        <note category="state">new</note>
       </notes>
       <segment>
         <source>Zombies</source>
@@ -1655,6 +1659,7 @@
       <notes>
         <note category="german">Apps</note>
         <note category="from">php:///src/Controller/Admin/AdminActionController.php</note>
+        <note category="state">new</note>
       </notes>
       <segment>
         <source>Apps</source>
@@ -1805,6 +1810,7 @@
       <notes>
         <note category="german">URL</note>
         <note category="from">twig:///templates/ajax/admin/apps/edit.html.twig;twig:///templates/ajax/public/disclaimer.html.twig</note>
+        <note category="state">new</note>
       </notes>
       <segment>
         <source>URL</source>
@@ -2998,6 +3004,7 @@
       <notes>
         <note category="german">Avatar</note>
         <note category="from">twig:///templates/ajax/admin/groups/edit.html.twig;twig:///templates/ajax/admin/users/account.html.twig;twig:///templates/ajax/admin/users/ban.html.twig</note>
+        <note category="state">new</note>
       </notes>
       <segment>
         <source>Avatar</source>
@@ -3928,6 +3935,7 @@
       <notes>
         <note category="german">MyHordes</note>
         <note category="from">twig:///templates/ajax/admin/users/pictos.html.twig</note>
+        <note category="state">new</note>
       </notes>
       <segment>
         <source>MyHordes</source>
@@ -3998,6 +4006,7 @@
       <notes>
         <note category="german">Kernel</note>
         <note category="from">php:///src/Controller/Admin/AdminFileSystemController.php</note>
+        <note category="state">new</note>
       </notes>
       <segment>
         <source>Kernel</source>
