--- a/translations/ghost+intl-icu.es.xlf
+++ b/translations/ghost+intl-icu.es.xlf
@@ -260,6 +260,7 @@
       <notes>
         <note category="german">Normal</note>
         <note category="from">twig:///templates/ajax/ghost/create_town.html.twig</note>
+        <note category="state">new</note>
       </notes>
       <segment>
         <source>Normal</source>
