--- a/translations/validators.es.xlf
+++ b/translations/validators.es.xlf
@@ -785,6 +785,7 @@
       <notes>
         <note category="german">Fehler</note>
         <note category="from">twig:///vendor/symfony/twig-bridge/Resources/views/Form/bootstrap_4_layout.html.twig</note>
+        <note category="state">new</note>
       </notes>
       <segment>
         <source>Error</source>
