--- a/translations/game+intl-icu.en.xlf
+++ b/translations/game+intl-icu.en.xlf
@@ -10645,7 +10645,7 @@
       </notes>
       <segment>
         <source>Mithilfe des {item} hast du die Tür aufgeschlossen!</source>
-        <target>You have managed to unlock the door, however, the {item}, looks busted...</target>
+        <target>You have managed to unlock the door, however, the {item} looks busted...</target>
       </segment>
     </unit>
     <unit id="ZcFLHOU" name="Sauerstoff">
