--- a/translations/game+intl-icu.es.xlf
+++ b/translations/game+intl-icu.es.xlf
@@ -26267,7 +26267,7 @@
       </notes>
       <segment>
         <source>Dieser Bürger wurde aus der Gemeinschaft verbannt.</source>
-        <target>Dieser Bürger wurde aus der Gemeinschaft verbannt.</target>
+        <target>Este habitante ha sido desterrado por la comunidad.</target>
       </segment>
     </unit>
     <unit id="r2vaFFk" name="Du musst für deine Beschwerde eine Begründung angeben.">
