--- a/translations/game+intl-icu.es.xlf
+++ b/translations/game+intl-icu.es.xlf
@@ -26256,7 +26256,7 @@
       </notes>
       <segment>
         <source>Diese Aktion kannst du erst morgen erneut versuchen.</source>
-        <target>Diese Aktion kannst du erst morgen erneut versuchen.</target>
+        <target>Podrás realizar esta acción nuevamente mañana.</target>
       </segment>
     </unit>
     <unit id="i8PEylr" name="Dieser Bürger wurde aus der Gemeinschaft verbannt.">
