--- a/translations/game+intl-icu.fr.xlf
+++ b/translations/game+intl-icu.fr.xlf
@@ -26082,5 +26082,15 @@ cette violente opération...]]></target>
         <target>Il vaut mieux choisir une bonne occupation : en effet pas d'existence sans occupation. Sinon à quoi servirez-vous ? La communauté que vous rejoignez a besoin de tous types de personnes. C'est certainement l'effort collectif qui déterminera en grande partie votre temps de survie...</target>
       </segment>
     </unit>
+    <unit id="FwB1Mvm" name="Mit dem richtigen Schlüssel kannst du diese Tür öffnen.">
+      <notes>
+        <note category="german">Mit dem richtigen Schlüssel kannst du diese Tür öffnen.</note>
+        <note category="from">twig:///templates/ajax/game/beyond/ruin.html.twig</note>
+      </notes>
+      <segment>
+        <source>Mit dem richtigen Schlüssel kannst du diese Tür öffnen.</source>
+        <target>Vous pouvez ouvrir cette porte si vous avez la bonne clé avec vous.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
