--- a/translations/game+intl-icu.fr.xlf
+++ b/translations/game+intl-icu.fr.xlf
@@ -9800,7 +9800,7 @@
       </notes>
       <segment>
         <source>Meine Nachrichten lesen.</source>
-        <target>Lire mon courrier.</target>
+        <target>Lire mon courrier</target>
       </segment>
     </unit>
     <unit id="bYjLN7a" name="Draußen">
