--- a/translations/admin+intl-icu.fr.xlf
+++ b/translations/admin+intl-icu.fr.xlf
@@ -4531,5 +4531,16 @@
         <target>Évènement de la ville</target>
       </segment>
     </unit>
+    <unit id="JSVSGLb" name="Koalitionen">
+      <notes>
+        <note category="german">Koalitionen</note>
+        <note category="from">twig:///templates/ajax/admin/towns/explorer.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Koalitionen</source>
+        <target>Koalitionen</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
