--- a/translations/admin+intl-icu.fr.xlf
+++ b/translations/admin+intl-icu.fr.xlf
@@ -4542,5 +4542,27 @@
         <target>Koalitionen</target>
       </segment>
     </unit>
+    <unit id="hR.qIOi" name="Profiler">
+      <notes>
+        <note category="german">Profiler</note>
+        <note category="from">twig:///templates/ajax/admin/towns/explorer.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Profiler</source>
+        <target>Profiler</target>
+      </segment>
+    </unit>
+    <unit id="Y67xIUn" name="Nicht installiert">
+      <notes>
+        <note category="german">Nicht installiert</note>
+        <note category="from">twig:///templates/ajax/admin/towns/explorer.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Nicht installiert</source>
+        <target>Nicht installiert</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
