--- a/translations/admin+intl-icu.en.xlf
+++ b/translations/admin+intl-icu.en.xlf
@@ -4595,7 +4595,7 @@
       </notes>
       <segment>
         <source>Nicht installiert</source>
-        <target>Nicht installiert</target>
+        <target>Not installed</target>
       </segment>
     </unit>
   </file>
