--- a/translations/game+intl-icu.de.xlf
+++ b/translations/game+intl-icu.de.xlf
@@ -10080,7 +10080,7 @@
     <unit id="VP5Pzpa" name="Verbessrung des Tages">
       <segment>
         <source>Verbessrung des Tages</source>
-        <target>Verbessrung des Tages</target>
+        <target>Verbesserung des Tages</target>
       </segment>
     </unit>
     <unit id="fh_ltq7" name="Die Bank">
