Added FR translation in soul

--- a/translations/soul+intl-icu.fr.xlf
+++ b/translations/soul+intl-icu.fr.xlf
@@ -3759,7 +3759,7 @@
       </notes>
       <segment>
         <source>Dies ist eine Event-Stadt.</source>
-        <target>Dies ist eine Event-Stadt.</target>
+        <target>C’est une ville événement.</target>
       </segment>
     </unit>
     <unit id="mupnQII" name="Animateur">
