--- a/translations/admin+intl-icu.fr.xlf
+++ b/translations/admin+intl-icu.fr.xlf
@@ -4562,5 +4562,25 @@
         <target>Non installé</target>
       </segment>
     </unit>
+    <unit id="pACkzCf" name="Persönliche Beschreibung:">
+      <notes>
+        <note category="german">Persönliche Beschreibung:</note>
+        <note category="from">twig:///templates/ajax/admin/towns/explorer.html.twig</note>
+      </notes>
+      <segment>
+        <source>Persönliche Beschreibung:</source>
+        <target>Description personnelle :</target>
+      </segment>
+    </unit>
+    <unit id="O9RB2q8" name="Letzte Worte:">
+      <notes>
+        <note category="german">Letzte Worte:</note>
+        <note category="from">twig:///templates/ajax/admin/towns/explorer.html.twig</note>
+      </notes>
+      <segment>
+        <source>Letzte Worte:</source>
+        <target>Dernières paroles :</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
