--- a/translations/game+intl-icu.es.xlf
+++ b/translations/game+intl-icu.es.xlf
@@ -15560,7 +15560,7 @@
     </unit>
     <unit id="VP5Pzpa" name="Verbessrung des Tages">
       <notes>
-        <note category="german">Verbessrung des Tages</note>
+        <note category="german">Verbesserung des Tages</note>
         <note category="from">twig:///templates/ajax/game/town/upgrades.html.twig</note>
       </notes>
       <segment>
