--- a/translations/docs+intl-icu.es.xlf
+++ b/translations/docs+intl-icu.es.xlf
@@ -1321,5 +1321,27 @@
         <target>Ruina explorable</target>
       </segment>
     </unit>
+    <unit id="X.6NX4Q" name="Die Eternaltwin-ID, wenn er sein Konto verknüpft hat">
+      <notes>
+        <note category="german">Die Eternaltwin-ID, wenn er sein Konto verknüpft hat</note>
+        <note category="from">twig:///templates/ajax/public/apidocs.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Die Eternaltwin-ID, wenn er sein Konto verknüpft hat</source>
+        <target>Die Eternaltwin-ID, wenn er sein Konto verknüpft hat</target>
+      </segment>
+    </unit>
+    <unit id="DsWqhTO" name="Eternaltwin-ID des Spielers">
+      <notes>
+        <note category="german">Eternaltwin-ID des Spielers</note>
+        <note category="from">twig:///templates/ajax/public/apidocs.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Eternaltwin-ID des Spielers</source>
+        <target>Eternaltwin-ID des Spielers</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
