--- a/translations/admin+intl-icu.es.xlf
+++ b/translations/admin+intl-icu.es.xlf
@@ -4517,44 +4517,40 @@
       <notes>
         <note category="german">Koalitionen</note>
         <note category="from">twig:///templates/ajax/admin/towns/explorer.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Koalitionen</source>
-        <target>Koalitionen</target>
+        <target>Alianzas</target>
       </segment>
     </unit>
     <unit id="hR.qIOi" name="Profiler">
       <notes>
         <note category="german">Profiler</note>
         <note category="from">twig:///templates/ajax/admin/towns/explorer.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Profiler</source>
-        <target>Profiler</target>
+        <target>Perfilador</target>
       </segment>
     </unit>
     <unit id="Y67xIUn" name="Nicht installiert">
       <notes>
         <note category="german">Nicht installiert</note>
         <note category="from">twig:///templates/ajax/admin/towns/explorer.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Nicht installiert</source>
-        <target>Nicht installiert</target>
+        <target>No instalado</target>
       </segment>
     </unit>
     <unit id="rDme7TT" name="Nachricht:">
       <notes>
         <note category="german">Nachricht:</note>
         <note category="from">twig:///templates/ajax/admin/towns/explorer.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Nachricht:</source>
-        <target>Nachricht:</target>
+        <target>Noticias:</target>
       </segment>
     </unit>
     <unit id="pACkzCf" name="Persönliche Beschreibung:">
