--- a/translations/soul+intl-icu.es.xlf
+++ b/translations/soul+intl-icu.es.xlf
@@ -4521,22 +4521,20 @@
       <notes>
         <note category="german">Gegenstände in der Bank nach Anzahl sortieren</note>
         <note category="from">twig:///templates/ajax/soul/settings.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Gegenstände in der Bank nach Anzahl sortieren</source>
-        <target>Gegenstände in der Bank nach Anzahl sortieren</target>
+        <target>Ordenar objetos del almacén por cantidad</target>
       </segment>
     </unit>
     <unit id="YpH8nkB">
       <notes>
         <note category="german">Standartmäßig sortiert MyHordes Gegenstände in der Bank nach ihrem Typ. Aktiviere diese Option, wenn du die Sortierung von DieVerdammten bevorzugst, bei der Gegenstände primär nach ihrer Anzahl sortiert werden.</note>
         <note category="from">twig:///templates/ajax/soul/settings.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Standartmäßig sortiert MyHordes Gegenstände in der Bank nach ihrem Typ. Aktiviere diese Option, wenn du die Sortierung von DieVerdammten bevorzugst, bei der Gegenstände primär nach ihrer Anzahl sortiert werden.</source>
-        <target>Standartmäßig sortiert MyHordes Gegenstände in der Bank nach ihrem Typ. Aktiviere diese Option, wenn du die Sortierung von DieVerdammten bevorzugst, bei der Gegenstände primär nach ihrer Anzahl sortiert werden.</target>
+        <target>Por defecto, el almacén en MyHordes es ordenado por tipo de objeto. Si prefieres el orden que era usado en Die2Nite, donde los objetos eran principalmente ordenados por su cantidad, activa esta configuración.</target>
       </segment>
     </unit>
   </file>
